# llm-distillery

./: .env.example  .gitignore  .nexusmind-owns  ASSESSMENT_REPORT.md  CHANGELOG.md  CLAUDE.md  FREEFILESYNC_EXCLUSIONS.txt  GETTING_STARTED.md  LICENSE  MIGRATION_FROM_NEXUSMIND.md  MIGRATION_GUIDE.md  README.md  README_MIGRATION_COMPLETE.md  RESTRUCTURING_PLAN.md  SESSION_STATE.md  VERIFY_DEBUG_CODE.sh  analyze_dataset.py  clean_dataset.py  compare_calibrations.py  llm-distillery-sync.ffs_gui  migrate_structure.bat  migrate_structure.sh  pyproject.toml  requirements.txt  sync.py  sync_config.example.json  test_batch_labeler.py  test_prefilter.py
.claude/: settings.local.json
.githooks/: commit-msg
datasets/: README.md  master_dataset_metadata.json  test_1k_metadata.json
docs/: ARCHITECTURE.md  BATCH_LABELING_READY.md  BATCH_SCORING_READY.md  CALIBRATION_1K_INSTRUCTIONS.md  COMMERCE_PREFILTER_SLM_DESIGN.md  CURRENT_TASK.md  DATA_ARCHIVE_PROPOSAL.md  DATA_INVENTORY.md  DECISIONS.md  DOCUMENTATION_IMPROVEMENTS.md  EDUCATION_QUICKSTART.md  FILTERS_ON_HOLD.md  FILTER_WORKFLOW.md  FUTURE_FILTER_IDEAS.md  IDEAS.md  MODEL_TRAINING_EXPLAINED.md  OPEN_QUESTIONS.md  ORGANIZATION.md  ORPHANED_DOCS_CLEANUP.md  ORPHANED_SCRIPTS_CLEANUP.md  ORPHANED_SCRIPTS_CLEANUP_COMPLETED.md  PHASE_7_NEXT_STEPS.md  PLAN_head_tail_deployment.md  PREFILTER_HARMONIZATION_TASK.md  PROJECT_OVERVIEW.md  README.md  README_UPDATES_NEEDED.md  REPOSITORY_CLEANUP_2025-11-20.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  RUNBOOK.md  RUN_THIS_DEBUG.md  SCRIPTS_REORGANIZATION_PLAN.md  SESSION_STATE.md  TODO.md  (+16 more)
(+2233 files in other folders)
